--- a/app/views/html/_footer.html.erb
+++ b/app/views/html/_footer.html.erb
@@ -1,9 +1,11 @@
+</div> <!-- body from header -->
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-  <div class=" text-center">
-    <strong>Copyright 2020 &copy; Universal Food Shop</strong>
-      <div class="col-md-6 offset-md-3">
+<footer>
+  <div>
+    <p>Copyright 2020 &copy; FriendMeter</p>
+      <div id="social">
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-google"></a>
         <a href="#" class="fa fa-linkedin"></a>
@@ -11,5 +13,6 @@
       </div>
   </div>
 </footer>
+</div><!-- container from header -->
 </body>
 </html>
