--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -1,72 +1,75 @@
-<header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
-  <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/" class="navbar-brand"><%= image_tag("logo.png", alt: "Logo", :class => "logo") %></a>
-    </div>
-    <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <%= link_to "Home", "/", class: "nav-link" %>
-        </li>
-        <li>
-          <%= link_to "About", "/about", class: "nav-link" %>
-        </li>
-        <li>
-          <%= link_to "Help", "/help", class: "nav-link" %>
-        </li>
-        
-        <li class="dropdown">
-          <a class="dropbtn">Events <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "All Events", "/events", class: "nav-link" %></li>
-            <li><%= link_to "My Events", "/myevents", class: "nav-link" %></li>
-          </ul>
-        </li>
-        <% if user_signed_in? %>
+<div id="container"><!-- ended in footer -->
+  <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+    <div class="container">
+      <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="/" class="navbar-brand"><%= image_tag("logo.png", alt: "Logo", :class => "logo") %></a>
+      </div>
+      <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to "Home", "/", class: "nav-link" %>
+          </li>
+          <li>
+            <%= link_to "About", "/about", class: "nav-link" %>
+          </li>
+          <li>
+            <%= link_to "Help", "/help", class: "nav-link" %>
+          </li>
+          
           <li class="dropdown">
-            <a class="dropbtn">Account <b class="caret"></b></a>
-            <ul class="dropdown-menu">  
-              <li class="notifications">
-                <%= link_to "Notifications (" + current_user.notifications.count.to_s + ")", "/notifications", class: "nav-link" %>
-              </li>
-              <li>
-                <%= link_to "Friends (" + current_user.friends.count.to_s + ")", "/friends", class: "nav-link" %>
-              </li>
-              <li>
-                <a class="nav-link" href="/users/<%= current_user.id %>">Profile</a>
-              </li>
-              <% if current_user.admin? %>
-                <li class="nav-item">
-                  <%= link_to "Admin", "/admin", class: "nav-link" %>
-                </li>
-              <% end %>
+            <a class="dropbtn">Events <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "All Events", "/events", class: "nav-link" %></li>
+              <li><%= link_to "My Events", "/myevents", class: "nav-link" %></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <%= link_to "Logout", destroy_user_session_path, :method => :delete, class: "nav-link" %>
-          </li>
-        <% else %>
-          <li>
-            <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
-          </li>
-          <li>
-            <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
-    </nav>
+          <% if user_signed_in? %>
+            <li class="dropdown">
+              <a class="dropbtn">Account <b class="caret"></b></a>
+              <ul class="dropdown-menu">  
+                <li class="notifications">
+                  <%= link_to "Notifications (" + current_user.notifications.count.to_s + ")", "/notifications", class: "nav-link" %>
+                </li>
+                <li>
+                  <%= link_to "Friends (" + current_user.friends.count.to_s + ")", "/friends", class: "nav-link" %>
+                </li>
+                <li>
+                  <a class="nav-link" href="/users/<%= current_user.id %>">Profile</a>
+                </li>
+                <% if current_user.admin? %>
+                  <li class="nav-item">
+                    <%= link_to "Admin", "/admin", class: "nav-link" %>
+                  </li>
+                <% end %>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Logout", destroy_user_session_path, :method => :delete, class: "nav-link" %>
+            </li>
+          <% else %>
+            <li>
+              <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
+            </li>
+            <li>
+              <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
+            </li>
+          <% end %>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <div class="alert">
+      <%= alert %>
   </div>
-</header>
-<div class="alert">
-    <%= alert %>
-</div>
-<div class="notice">
-    <%= notice %>
-</div>
+  <div class="notice">
+      <%= notice %>
+  </div>
+  
+  <div id="body">
 
