unattend, events/show, and permissions helper cleanup
- unattend button and functionality working
- cleaned up single event page html/css
- cleaned up permissions helper with efficient use of find_by method

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,8 +38,12 @@ h1, h2, h3, h4 {
     text-align:center;
 }
 
-.profile img, .event img, .events img {
+.profile img, .events img {
     max-width:150px;
+}
+
+.event img {
+    max-width:300px;
 }
 
 //small profile view
