methods cleaned up, forms styled
- methods moved to appropriate helpers
- styled some forms
- can now add/remove friends
- can now attend/unattend events

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,15 +34,15 @@ body {
     clear:both;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3 {
     text-align:center;
 }
 
-.profile img, .events img {
+.events img {
     max-width:150px;
 }
 
-.event img {
+.profile img, .event img {
     max-width:300px;
 }
 
