fixed form time/date selects

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -24,12 +24,16 @@
 
     <div class="field">
       <%= form.label :date %>
-      <%= form.date_select :date %>
+      <div class="selects">
+        <%= form.date_select :date %>
+      </div>
     </div>
 
     <div class="field">
       <%= form.label :time %>
-      <%= form.time_select :time %>
+      <div class="selects">
+        <%= form.time_select :time %>
+      </div>
     </div>
 
     <div class="field">
