--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -5,7 +5,7 @@ div.form-wrapper {
 }
 
 form.form {
-    input {
+    input, textarea, select {
         font-family: 'Montserrat', sans-serif;
         font-size: 15px;
         line-height: 1.2;
@@ -17,6 +17,21 @@ form.form {
         height: 50px;
         border-radius: 25px;
         padding: 0 30px 0 53px;
+    }
+
+    textarea {
+        height:150px;
+    }
+
+    select {
+        width:33%;
+        padding:10px;
+        float:left;
+    }
+
+    .selects {
+        clear:both;
+        height:50px;
     }
 
     .field, .actions {
