--- a/app/views/html/_footer.html.erb
+++ b/app/views/html/_footer.html.erb
@@ -1,5 +1,7 @@
 </div> <!-- body from header -->
 
+<div class="clear"></div>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <footer>
