--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,4 +2,9 @@
 
 <%= render 'form', event: @event %>
 
-<%= link_to 'Back', events_path %>
+<button class="btn1" onclick="window.location.href='javascript: history.go(-1)'">
+    <span class="circle" aria-hidden="true">
+    <span class="icon arrow left"></span>
+    </span>
+    <span class="button-text">Back</span>
+</button>
