--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,11 +43,14 @@ h1, h2, h3 {
     max-width:150px;
 }
 
-.comment {
+.comment, .review {
     width:650px;
     margin:auto;
     img {
         max-width:100px;
+    }
+    .rating img {
+        max-width:20px;
     }
     .name {
         font-weight:bold;
