--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -7,6 +7,8 @@
     <tr>
       <th>Text</th>
       <th>Rating</th>
+      <th>Event ID</th>
+      <th>User ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +18,8 @@
       <tr>
         <td><%= review.text %></td>
         <td><%= review.rating %></td>
+        <td><%= review.event_id %></td>
+        <td><%= review.user_id %></td>
         <td><%= link_to 'Show', review %></td>
         <td><%= link_to 'Edit', edit_review_path(review) %></td>
         <td><%= link_to 'Destroy', review, method: :delete, data: { confirm: 'Are you sure?' } %></td>
