--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -25,7 +25,7 @@
     <div class="field">
       <%= form.label :date %>
       <div class="selects">
-        <%= form.date_select :date %>
+        <%= form.date_select :date, start_year: Date.today.year %>
       </div>
     </div>
 
