--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -71,58 +71,64 @@
   </button>
 <% end %>
 
-<!-- show event comments -->
-<h2 id="comments">Comments (<%= @comments.count %>)</h2>
-<% @comments.each do |comment|
-  @name = getName(current_user.id, comment.user_id) %>
-  <div class="comment">
-    <div class="col-xs-4 col-md-2">
-      <% if showPic(current_user.id, comment.user_id) %>
-        <image src="<%= url_for(User.find_by(id: comment.user_id).avatar) %>">
-      <% else %>
-        <%= image_tag("ph.png") %>
-      <% end %>
-    </div>
-    <div class="col-xs-6 col-md-8">
-      <p class="name <%= getChatColor(current_user.id, comment.user_id, @event.user_id) %>"><%= @name %></p>
-      <p><%= comment.text %></p>
-    </div>
-    <% if @b1 || comment.user_id == current_user.id %>
-    <div class="col-xs-2 col-md-2">
-      <%= link_to 'Delete', comment, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %>
-    </div>
-    <% end %>
-  </div>
-  <div class="clear"></div>
-<% end %>
-<% if @isi %>
-  <%= render 'cform', comment: @comment %>
-<% end %>
+<% if Date.today < @event.date %>
 
-<!-- show event reviews -->
-<h2 id="reviews">Reviews (<%= @reviews.count %>)</h2>
-<% @reviews.each do |review|
-  @name = getName(current_user.id, review.user_id) %>
-  <div class="review">
-    <div class="col-xs-4 col-md-2">
-      <% if showPic(current_user.id, review.user_id) %>
-        <image src="<%= url_for(User.find_by(id: review.user_id).avatar) %>">
-      <% else %>
-        <%= image_tag("ph.png") %>
+  <!-- show event comments -->
+  <h2 id="comments">Comments (<%= @comments.count %>)</h2>
+  <% @comments.each do |comment|
+    @name = getName(current_user.id, comment.user_id) %>
+    <div class="comment">
+      <div class="col-xs-4 col-md-2">
+        <% if showPic(current_user.id, comment.user_id) %>
+          <image src="<%= url_for(User.find_by(id: comment.user_id).avatar) %>">
+        <% else %>
+          <%= image_tag("ph.png") %>
+        <% end %>
+      </div>
+      <div class="col-xs-6 col-md-8">
+        <p class="name <%= getChatColor(current_user.id, comment.user_id, @event.user_id) %>"><%= @name %></p>
+        <p><%= comment.text %></p>
+      </div>
+      <% if @b1 || comment.user_id == current_user.id %>
+      <div class="col-xs-2 col-md-2">
+        <%= link_to 'Delete', comment, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %>
+      </div>
       <% end %>
     </div>
-    <div class="col-xs-6 col-md-8">
-      <p class="name <%= getChatColor(current_user.id, review.user_id, @event.user_id) %>"><%= @name %> <span class="rating"><%= reviewRating(review.rating).html_safe %></span></p>
-      <p><%= review.text %></p>
+    <div class="clear"></div>
+  <% end %>
+  <% if @isi %>
+    <%= render 'cform', comment: @comment %>
+  <% end %>
+
+<% else %>
+
+  <!-- show event reviews -->
+  <h2 id="reviews">Reviews (<%= @reviews.count %>)</h2>
+  <% @reviews.each do |review|
+    @name = getName(current_user.id, review.user_id) %>
+    <div class="review">
+      <div class="col-xs-4 col-md-2">
+        <% if showPic(current_user.id, review.user_id) %>
+          <image src="<%= url_for(User.find_by(id: review.user_id).avatar) %>">
+        <% else %>
+          <%= image_tag("ph.png") %>
+        <% end %>
+      </div>
+      <div class="col-xs-6 col-md-8">
+        <p class="name <%= getChatColor(current_user.id, review.user_id, @event.user_id) %>"><%= @name %> <span class="rating"><%= reviewRating(review.rating).html_safe %></span></p>
+        <p><%= review.text %></p>
+      </div>
+      <% if @b1 || review.user_id == current_user.id %>
+      <div class="col-xs-2 col-md-2">
+        <%= link_to 'Delete', review, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %>
+      </div>
+      <% end %>
     </div>
-    <% if @b1 || review.user_id == current_user.id %>
-    <div class="col-xs-2 col-md-2">
-      <%= link_to 'Delete', review, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %>
-    </div>
-    <% end %>
-  </div>
-  <div class="clear"></div>
-<% end %>
-<% if @isi %>
-  <%= render 'rform', review: @review %>
+    <div class="clear"></div>
+  <% end %>
+  <% if @isi && !hasReviewed(current_user.id, @event.id) %>
+    <%= render 'rform', review: @review %>
+  <% end %>
+
 <% end %>
