--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,11 @@
 //forms css
 @import "forms";
 
+//maps css
+@import "maps";
+
+@import "notifications";
+
 html, body {
     margin:0;
     padding:0;
@@ -49,9 +54,6 @@ h1, h2, h3 {
     img {
         max-width:100px;
     }
-    .rating img {
-        max-width:20px;
-    }
     .name {
         font-weight:bold;
         &.you {
@@ -65,6 +67,10 @@ h1, h2, h3 {
         }
     }
 }
+//must be after .comment/.review img and .event img
+.rating img {
+    max-width:20px !important;
+}
 
 .profile img, .event img {
     max-width:300px;
@@ -74,7 +80,7 @@ h1, h2, h3 {
 .user-sm, .event-sm {
     position:relative;
     display:block;
-    height:250px;
+    height:300px;
     a {
         text-decoration:none;
     }
