--- a/app/views/events/myevents.html.erb
+++ b/app/views/events/myevents.html.erb
@@ -51,6 +51,7 @@
         </tbody>
     </table>
 <% end %>
+<%= will_paginate @events1 %>
 
 <h2>Attending</h2>
 <% if @events2.count == 0 %>
@@ -95,6 +96,7 @@
         </tbody>
     </table>
 <% end %>
+<%= will_paginate @events2 %>
 
 <h2>Invited</h2>
 <% if @events3.count == 0 %>
@@ -147,3 +149,61 @@
         </tbody>
     </table>
 <% end %>
+<%= will_paginate @events3 %>
+
+<h2>Past Events</h2>
+<% if @events4.count == 0 %>
+    <p>You do not have any past events.</p>
+<% else %>
+    <table class="table events">
+        <thead class="thead-dark">
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Image</th>
+                <th>Public</th>
+                <th colspan="2"></th>
+            </tr>
+        </thead>
+    
+        <tbody>
+            <% @events4.each do |event| %>
+                <tr>
+                    <td><%= event.name %></td>
+                    <td><%= event.description %></td>
+                    <td><%= event.date %></td>
+                    <td><%= event.time.strftime("%I:%M %p") %></td>
+                    <td>
+                        <% if event.avatar.attached? %>
+                            <image src="<%= url_for(event.avatar) %>">
+                        <% end %>
+                    </td>
+                    <td class="toggle"><%= !event.private ? image_tag("tick.png") : image_tag("red-x.png") %></td>
+                    <td>
+                        <button class="btn1" onclick="window.location.href='/events/<%= event.id %>'">
+                            <span class="circle" aria-hidden="true">
+                            <span class="icon arrow"></span>
+                            </span>
+                            <span class="button-text">View</span>
+                        </button>
+                    </td>
+                    <td>
+                        <% if !hasReviewed(current_user.id, event.id) %>
+                            <button class="btn1" onclick="window.location.href='/events/<%= event.id %>#reviews'">
+                                <span class="circle" aria-hidden="true">
+                                <span class="icon arrow"></span>
+                                </span>
+                                <span class="button-text">Review</span>
+                            </button>
+                        <% else %>
+                            <%= getUserStarRating(current_user.id, event.id) %>
+                        <% end %>
+                    </td>
+                </tr>
+            <% end %>
+        </tbody>
+    </table>
+<% end %>
+<%= will_paginate @events4 %>
