--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,7 @@
 <div class="event">
+  <% if eventEnded(@event.id) %>
+    <p class="alert">This event has ended.<br>Average Rating: <%= getAvgStarRating(@event.id) %></p>
+  <% end %>
   <h2><%= @event.name %></h2>
 
   <div class="col-xs-12 col-md-6">
@@ -33,7 +36,7 @@
 </div>
 
 <!-- show attending users -->
-<h2>Attending: <span class="count"><%= @attending.count %></span></h2>
+<h2><%= eventEnded(@event.id) ? "Attended" : "Attending" %>: <span class="count"><%= @attending.count %></span></h2>
 <% if @attending.count == 0 %>
   <p>There are no confirmed attendees yet.</p>
 <% else %>
@@ -55,23 +58,17 @@
   <% end %>
 <% end %>
 <div class="clear"></div>
-<% if !@isAttending %>
-  <button class="btn1" onclick="window.location.href='/events/<%= @event.id %>/1'">
-      <span class="circle" aria-hidden="true">
-      <span class="icon arrow"></span>
-      </span>
-      <span class="button-text">Attend</span>
-  </button>
-<% else %> <!--show unattend button -->
-  <button class="btn1" onclick="window.location.href='/events/<%= @event.id %>/2'">
+<%= will_paginate @attending %>
+<% if !eventEnded(@event.id) %>
+  <button class="btn1" onclick="window.location.href='/events/<%= @event.id %>/<%= @isAttending ? 2 : 1 %>'">
     <span class="circle" aria-hidden="true">
     <span class="icon arrow"></span>
     </span>
-    <span class="button-text">Unattend</span>
+    <span class="button-text"><%= @isAttending ? "Unattend" : "Attend" %></span>
   </button>
 <% end %>
 
-<% if Date.today < @event.date %>
+<% if !eventEnded(@event.id) %>
 
   <!-- show event comments -->
   <h2 id="comments">Comments (<%= @comments.count %>)</h2>
@@ -116,7 +113,7 @@
         <% end %>
       </div>
       <div class="col-xs-6 col-md-8">
-        <p class="name <%= getChatColor(current_user.id, review.user_id, @event.user_id) %>"><%= @name %> <span class="rating"><%= reviewRating(review.rating).html_safe %></span></p>
+        <p class="name <%= getChatColor(current_user.id, review.user_id, @event.user_id) %>"><%= @name %> <%= reviewRating(review.rating) %></p>
         <p><%= review.text %></p>
       </div>
       <% if @b1 || review.user_id == current_user.id %>
