--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -15,12 +15,6 @@
           <li>
             <%= link_to "Home", "/", class: "nav-link" %>
           </li>
-          <li>
-            <%= link_to "About", "/about", class: "nav-link" %>
-          </li>
-          <li>
-            <%= link_to "Help", "/help", class: "nav-link" %>
-          </li>
           
           <li class="dropdown">
             <a class="dropbtn">Events <b class="caret"></b></a>
@@ -30,20 +24,23 @@
             </ul>
           </li>
           <% if user_signed_in? %>
+            <li <%= current_user.notifications.count > 0 ? 'class=blue' : "" %>>
+              <%= link_to "Notifications (" + current_user.notifications.count.to_s + ")", "/notifications", class: "nav-link" %>
+            </li>
+            <li>
+              <%= link_to "Friends (" + current_user.friends.count.to_s + ")", "/friends", class: "nav-link" %>
+            </li>
             <li class="dropdown">
               <a class="dropbtn">Account <b class="caret"></b></a>
-              <ul class="dropdown-menu">  
-                <li class="notifications">
-                  <%= link_to "Notifications (" + current_user.notifications.count.to_s + ")", "/notifications", class: "nav-link" %>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="/users/<%= current_user.id %>">View Profile</a>
                 </li>
                 <li>
-                  <%= link_to "Friends (" + current_user.friends.count.to_s + ")", "/friends", class: "nav-link" %>
-                </li>
-                <li>
-                  <a class="nav-link" href="/users/<%= current_user.id %>">Profile</a>
+                  <a href="/users/edit">Edit Profile</a>
                 </li>
                 <% if current_user.admin? %>
-                  <li class="nav-item">
+                  <li>
                     <%= link_to "Admin", "/admin", class: "nav-link" %>
                   </li>
                 <% end %>
