--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -21,6 +21,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "All Events", "/events", class: "nav-link" %></li>
               <li><%= link_to "My Events", "/myevents", class: "nav-link" %></li>
+              <li><%= link_to "Create Event", "/events/new", class: "nav-link" %></li>
             </ul>
           </li>
           <% if user_signed_in? %>
